--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,30 +4,27 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
+        <!--Home-->
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
+        <!--saved recordings-->
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
-        <item
-            android:id="@+id/nav_tools"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_tools" />
+            android:id="@+id/nav_saved_recordings"
+            android:icon="@android:drawable/btn_radio"
+            android:title="@string/menu_saved_recordings" />
+
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Other">
         <menu>
+            <!--Settings-->
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="@string/menu_share" />
+                android:id="@+id/nav_tools"
+                android:icon="@drawable/ic_menu_manage"
+                android:title="@string/menu_tools" />
+            <!--feedback-->
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
