--- a/app/src/main/res/layout/record_item.xml
+++ b/app/src/main/res/layout/record_item.xml
@@ -6,37 +6,41 @@
     android:background="#F0F0F0"
     android:orientation="vertical"
     android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:elevation="12dp">
 
-    <ProgressBar
-        style="?android:attr/progressBarStyleHorizontal"
+    <SeekBar
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_height="30dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-
-
-        <ImageButton
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            app:srcCompat="@android:drawable/ic_media_play" />
-
-        <ImageButton
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            app:srcCompat="@android:drawable/ic_media_pause" />
         <TextView
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="7"
             android:textSize="20sp"
-            android:text="test" />
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:orientation="horizontal">
+            <ImageButton
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                app:srcCompat="@android:drawable/ic_media_play" />
+
+            <ImageButton
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                app:srcCompat="@android:drawable/ic_media_pause" />
+        </LinearLayout>
 
     </LinearLayout>
 
